# Auxi.run

./: .gitignore  README.md  docker-compose.yml
auxi/: pyproject.toml
auxi/app/: __init__.py  __main__.py  util.py
auxi/compare_models/: __main__.py
auxi/docker/: Dockerfile  entrypoint.sh
auxi/train/: __init__.py  __main__.py  negative_data.py
